<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheeseBrowser</string>
    <string name="reboot_button">Reboot</string>
	<string name="edit_button">Edit</string>
	<string name="disable_display_button">Disable Display</string>
    <string name="edit_dialog_text_view">Home Page</string>
    <string name="edit_dialog_ok_button">OK</string>
    <string name="edit_dialog_cancel_button">Cancel</string>
    <string name="play_button">Play</string>
    <string name="show_delay_button">Show Delay:</string>
    <string name="help_button">help</string>

    <string name="startup_time_text_view_string" >Auto Startup Time: </string>
    <string name="shutdown_time_text_view_string">Auto Shutdown Time:</string>
    <string name="homepage_text_view_string">Home Page:</string>

    <string name="monday_string"    >Monday       </string>
    <string name="tuesday_string"   >Tuesday      </string>
    <string name="wednesday_string" >Wednesday    </string>
    <string name="thursday_string"  >Thursday     </string>
    <string name="friday_string"    >Friday       </string>
    <string name="saturday_string"  >Saturday     </string>
    <string name="sunday_string"    >Sunday       </string>
    <string name="quick_string"     >Quick Setting</string>

    <string name="single_enable_checkout_string">Enable</string>
    
    <string name="default_startup_time">6:30</string>
    <string name="default_shutdown_time">18:30</string>

    <string name="write_serial_starting_string">Starting write</string>
    <string name="write_serial_completed_string">Write completed</string>
    <string name="write_serial_failed_string">Write failed</string>
    
    <string name="show_delay_title_string">Show delay:</string>
    
        <!--Help page-->
    <string name="product_info">Cheese Cloud description</string>
    <string name="version_info">Version: 1.1</string>
    <string name="Email_Developer">Email Developer</string>
    <string name="Website">Website</string>
</resources>
